INCLUDES = -I$(top_srcdir)/src -I/sw/include -Ilibcdk

noinst_LIBRARIES = librubik.a

librubik_a_SOURCES = \
	entry.cpp \
	fselect.cpp \
	label.cpp \
	muse_tui.cpp \
	play_infobox.cpp \
	screen.cpp \
	scroll.cpp \
	single_channel.cpp \
	slider.cpp \
	about.cpp \
	connectbox.cpp \
	encsetbox.cpp \
	streamsetbox.cpp \
	itemlist.cpp \
	menu.cpp \
	ncurses_gui.cpp

SUBDIRS = libcdk
