
INCLUDES = -I$(top_srcdir)/ncurses/libcdk

noinst_HEADERS = alphalist.h binding.h buttonbox.h calendar.h cdk_config.h \
cdk.h cdk_objs.h cdkscreen.h cdk_util.h curdefs.h dialog.h draw.h entry.h \
fscale.h fselect.h graph.h histogram.h itemlist.h label.h marquee.h matrix.h \
mentry.h menu.h radio.h scale.h scroll.h selection.h slider.h swindow.h \
template.h viewer.h

noinst_LIBRARIES = libcdk.a

libcdk_a_SOURCES = \
	alphalist.c \
	binding.c \
	buttonbox.c \
	calendar.c \
	cdk.c \
	cdkscreen.c \
	debug.c \
	dialog.c \
	draw.c \
	entry.c \
	fscale.c \
	fselect.c \
	graph.c \
	histogram.c \
	itemlist.c \
	label.c \
	marquee.c \
	matrix.c \
	mentry.c \
	menu.c \
	position.c \
	radio.c \
	scale.c \
	scroll.c \
	selection.c \
	slider.c \
	swindow.c \
	template.c \
	viewer.c
