
INCLUDES = -I$(top_srcdir)/ncurses/libcdk

noinst_LIBRARIES = libcdk.a

libcdk_a_SOURCES = \
	alphalist.c \
	binding.c \
	buttonbox.c \
	calendar.c \
	cdk.c \
	cdkscreen.c \
	debug.c \
	dialog.c \
	draw.c \
	entry.c \
	fscale.c \
	fselect.c \
	graph.c \
	histogram.c \
	itemlist.c \
	label.c \
	marquee.c \
	matrix.c \
	mentry.c \
	menu.c \
	position.c \
	radio.c \
	scale.c \
	scroll.c \
	selection.c \
	slider.c \
	swindow.c \
	template.c \
	viewer.c
